--- a/javascript/Step10_JSON3.html
+++ b/javascript/Step10_JSON3.html
@@ -8,6 +8,7 @@
 <body>
     <button id="printBtn">출력하기</button>
     <button id="printBtn2">출력하기2</button>
+    <button id="printBtn3">출력하기3</button>
     <ul id="friends">
         
     </ul>
@@ -20,6 +21,7 @@
             - <li>김구라</li> 이런식으로 li 요소를 만들어서 문자열을 출력한후 ul 요소에 
               추가 해야 합니다.
         */
+        
         document.querySelector("#printBtn").addEventListener("click",()=>{
             //JSON 문자열을 실제 배열로 만든다.
             const names = JSON.parse(data);
