--- a/stylesheet/Step06_PseudoClass2.html
+++ b/stylesheet/Step06_PseudoClass2.html
@@ -21,7 +21,7 @@
 	</style>
 </head>
 <body>
-<a href="http://14.63.164.99">study</a>
+<a href="http://kimgura.site">study</a>
 <a href="http://daum.net">daum</a>
 <a href="http://naver.com">naver</a>	
 </body>
