--- a/css3/Step05_flex.html
+++ b/css3/Step05_flex.html
@@ -33,7 +33,7 @@
                 main 축 방향으로의 정렬 
                 flex-start | flex-end | center | space-between | space-around | space-evenly 
             */
-            justify-content: flex-start;
+            justify-content: center;
             /*
                 main 축의 수직인 축에 대한 정렬
                 stretch | flex-start | flex-end | center | baseline
